# morph2vec

./: .gitignore  README.md  arm.sh  preprocess.py  requirements.txt  run.sh  setup.py  utils.py
datasets/: .gitignore  hj-expanded-rare-100-processed.txt  hj-expanded-rare-100.txt  hj-expanded-rare-200-processed.txt  hj-expanded-rare-200.txt  hj-expanded-rare-250-processed.txt  hj-expanded-rare-250.csv  hj-expanded-rare-250.txt  hj-expanded-rare-300-processed.txt  hj-expanded-rare-300.txt  hj-expanded-rare-500-processed.txt  hj-expanded-rare-500.csv  hj-expanded-rare-500.txt  hj-expanded-rare-all-processed.txt  hj-expanded-rare-all.csv  hj-expanded-rare-all.txt  hj-expanded.csv  simlex-expanded-rare-250-processed.txt  simlex-expanded-rare-250.csv  simlex-expanded-rare-250.txt  simlex-expanded-rare-500-processed.txt  simlex-expanded-rare-500.csv  simlex-expanded-rare-500.txt  simlex-expanded-rare-all-processed.txt  simlex-expanded-rare-all.csv  simlex-expanded-rare-all.txt  simlex-expanded.csv  simlex.csv
fastText/: CMakeLists.txt
fastText/alignment/: align.py  eval.py
fastText/python/fastText/: FastText.py
fastText/python/fastText/pybind/: fasttext_pybind.cc
fastText/src/: args.cc  args.h  dictionary.cc  dictionary.h  utils.cc  utils.h
fasttext/: Makefile  dictionary.cc
morph2vec/: __init__.py  api.py  hyperparametersearch.py  train.py
morph2vec/data/: preprocess.py
morph2vec/entities/: models.py  tokens.py
morph2vec/evaluation/: fasttexteval.py
morph2vec/util/: utils.py
